<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/argsText"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonJIText"
                    android:id="@+id/radioButtonJI" />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonJRText"
                    android:id="@+id/radioButtonJR" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonNIText"
                    android:id="@+id/radioButtonNI" />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonNRText"
                    android:id="@+id/radioButtonNR" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/startButtonText"
            android:onClick="startFibonacci" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textResponse"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
